--- a/css/base.css
+++ b/css/base.css
@@ -1,24 +1,24 @@
 @charset "utf-8";
-body { color:#000;font:12px/1.231 "Î¢ÈíÑÅºÚ",Verdana, Arial, Helvetica, sans-serif ,""; background:#EFEFEF;} /*ÍøÕ¾×ÖÌåÑÕÉ«*/
-a { text-decoration:none; }  /*for ie f6n.net*/
-a:focus{outline:0;} /*for ff f6n.net*/
-
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote{margin:0;padding:0;}
-table{border-collapse:collapse;border-spacing:0;}
-fieldset,img{border:0;}
-address,caption,cite,code,dfn,em,th,var,optgroup{font-style:inherit;font-weight:inherit;}
-del,ins{text-decoration:none;}
-li{list-style:none;}
-caption,th{text-align:left;}
-q:before,q:after{content:'';}
-abbr,acronym{border:0;font-variant:normal;}
-input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inherit;font-style:inherit;font-weight:inherit;}
-input,button,textarea,select{*font-size:100%;}
-input,select{vertical-align:middle;}
-/*body{font:12px/1.231 arial,helvetica,clean,sans-serif;}*/
-select,input,button,textarea,button{font:99% arial,helvetica,clean,sans-serif;}
-table{font-size:inherit;font:100%; border-collapse:collapse;}
-pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
+body { background-color: #EEEEEE; font-family: Microsoft Yahei, \5FAE\8F6F\96C5\9ED1, \5B8B\4F53, Arial, Verdana, sans-serif; font-size: 12px; color: #333; margin: 0; padding: 0;}
+body, button, input, textarea { font-size: 12px; line-height: 1.531; outline: none; margin: 0; padding: 0; border: 0;}
+p, ul, ol, dl, dt, dd, form, blockquote { margin: 0; padding: 0;}
+h1, h2, h3, h4, h5, h6 { font-size: 12px; margin: 0; padding: 0; font-weight: normal;}
+img { border: 0;}
+ul, ol { list-style: none;}
+img { border: 0;}
+a { text-decoration: none; color: #626262;}
+a:hover { text-decoration: none;}
+input, textarea, select { vertical-align: middle;}
+*:focus { outline: none;}
+em, i { font-style: normal;}
+.bold { font-weight: bold;}
+.clear { clear: both; display: block; height: 0; line-height: 0; font-size: 0;}
+.clearfix:after { content: "."; display: block; height: 0; clear: both; visibility: hidden;}
+*html .clearfix { height: 1%;}
+*+html .clearfix { height: 1%;}
+.none { display: none;}
+.cue { color: #999;}
+p.cue { margin-top: 5px;}
 
 
 /*common start*/
@@ -27,7 +27,9 @@ pre,code,kbd,samp,tt{font-family:monospace;*font-size:108%;line-height:100%;}
 .clear{clear:both; margin:0; padding:0; font-size:0; line-height:0; overflow:hidden;}
 .hidden{display:none;}
 .mt5{ margin-top:5px;}
+.ml5{ margin-left:5px;}
 .center {text-align:center;}
 .l_align {text-align:left;}
 .f_width{width:100%;}
+.relative{position:relative;}
 /*common end*/
