--- a/css/frame.css
+++ b/css/frame.css
@@ -49,9 +49,15 @@
 #content_box .content .ct_left .ct_l_section { width:230px; overflow:hidden; background:#fff; padding-bottom:5px;}
 #content_box .content .ct_left .ct_l_section .l_menu{width:218px; } /*列表项*/
 #content_box .content .ct_left .ct_l_section .l_menu dl{ width:218px; margin-top:5px; margin-left:2px; float:left;}
-#content_box .content .ct_left .ct_l_section .l_menu .l_m_item{font-size: 14px;color: #333; width:218px!important; float:left;text-indent:2em; line-height:38px;font-family:"微软雅黑";background:url(../images/m_i_bg.jpg) no-repeat ; float:left; cursor:pointer; border-bottom:dashed 1px #cfcfcf;}
+#content_box .content .ct_left .ct_l_section .l_menu .l_m_item{font-size: 14px;color: #333; width:213px!important; float:left;text-indent:2em; line-height:33px;font-family:"微软雅黑";background:url(../images/m_i_bg.jpg) no-repeat ; float:left; cursor:pointer; border-bottom:dashed 1px #cfcfcf;white-space:nowrap; overflow:hidden; padding-right:5px;}
 #content_box .content .ct_left .ct_l_section .l_menu .l_m_item a{color: #333;}
 #content_box .content .ct_left .ct_l_section .l_menu .l_m_item a:hover{ color:#007ADF}
+
+/*推荐产品*/
+#content_box .content .ct_left .ct_l_section .l_menu ul{margin:5px; width: 100%; display:inline;}
+#content_box .content .ct_left .ct_l_section .l_menu ul li{width: 97%; border-bottom:dashed 1px #cfcfcf; float:left; text-indent:1em; overflow:hidden; white-space: nowrap;}
+#content_box .content .ct_left .ct_l_section .l_menu ul li a{ font-family:"", Arial, Verdana, System;	font-size:12px;	line-height:30px; color:#333;}
+#content_box .content .ct_left .ct_l_section .l_menu ul li a:hover{ color:#007ADF; text-decoration:underline;}
 
 #content_box .content .ct_left .ct_l_section .l_menu .l_m_item3{font-size: 14px;color: #333; width:218px!important; float:left;text-indent:2em; line-height:43px;font-family:"微软雅黑"; float:left; cursor:pointer; border-bottom:dashed 1px #cfcfcf;}
 #content_box .content .ct_left .ct_l_section .l_menu .l_m_item3 a{color: #333;}
@@ -62,18 +68,26 @@
 #content_box .content .ct_left .ct_l_section .l_text{ float:left; width:220px; margin:5px 0 5px 10px; display:inline;  line-height:20px;font-size:12px; color:#555; padding-bottom:10px; }
 
 
-#content_box .content .ct_right{width:723px;overflow:hidden; background:#fff; padding-bottom:5px;}
+#content_box .content .ct_right{width:723px;overflow:hidden; background:#fff;}
 #content_box .content .ct_r_box .ct_right{ width:723px; }
-#content_box .content .ct_r_box .ct_right .ct_r_list{ width:721px;border:1px solid #ddd }
-#content_box .content .ct_r_box .ct_right .ct_r_list dl{margin:6px 0 4px 9px; display:inline; float:left;  width:230px;}
-#content_box .content .ct_r_box .ct_right dd{ width:223px; height:170px; float:left; border:1px solid #ccc;}
-#content_box .content .ct_r_box .ct_right dd:hover{border:1px solid #206AB3;}
-#content_box .content .ct_r_box .ct_right dd img{ width:220px; height:160px; margin:1px; display:inline;} 
-#content_box .content .ct_r_box .ct_right .a_text{ height:25px; line-height:25px; float:left; width:220px; overflow:hidden; text-align:center; overflow: hidden;white-space: nowrap;text-overflow: ellipsis;}
-#content_box .content .ct_r_box .ct_right .a_text a{ color:#333;}
-#content_box .content .ct_r_box .ct_right .a_text a:hover{ color:#007ADF; text-decoration:underline;}
+#content_box .content .ct_r_box .ct_right .ct_r_content{ width:721px; }
+#content_box .content .ct_r_box .ct_right .ct_r_content .in_mall{display:inline-block; height:25px; color:#006EB9;}
+#content_box .content .ct_r_box .ct_right .ct_r_content dl{margin:6px 0 4px 9px; display:inline; float:left;  width:228px; border:1px solid #ccc;}
+#content_box .content .ct_r_box .ct_right .ct_r_content dl:hover{border:1px solid #206AB3;}
+#content_box .content .ct_r_box .ct_right .ct_r_content dd{ width:100%; height:170px; float:left; text-align:center; border-bottom:dashed 1px #cfcfcf;}
+#content_box .content .ct_r_box .ct_right .ct_r_content dd img{ width:220px; height:160px; margin:1px; display:inline;} 
+#content_box .content .ct_r_box .ct_right .ct_r_content .a_text{ height:55px; line-height:30px; float:left; width:220px; overflow:hidden; overflow: hidden;text-overflow: ellipsis;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .a_text a{ color:#333;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .a_text a:hover{ color:#007ADF; text-decoration:underline;}
 
-#content_box .content .ct_r_box .ct_right .ct_r_panel{ width: 98%; margin:5px auto; line-height:18px; text-indent:2em;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_title_pnl{width:721px; border-bottom:dashed 1px #cfcfcf; padding:5px;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_m_img{ width:300px; height:200px; border:1px solid #ccc;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_m_img:hover{border:1px solid #206AB3;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_title{margin-left:10px;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_title .d_t_name{ min-height:21px;_height:21px;font-size:16px;font-weight:700;line-height:21px;color:#3C3C3C}
+#content_box .content .ct_r_box .ct_right .ct_r_content .d_title .d_t_link{ margin:5px auto;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .p_detail{padding:5px;}
+#content_box .content .ct_r_box .ct_right .ct_r_content .p_d_links{padding:5px; margin-top:5px; border-top:dashed 1px #cfcfcf;}
 
 #content_box .content .dh_c{ border:1px solid #D8D8D8; float:left; width:232px; background:#fff; }
 #content_box .content .dh_c h2{ background:url(../images/pro_22.jpg) no-repeat; height:33px; line-height:33px; color:#fff; text-align:center;font-family:"微软雅黑";font-size:14px;}
@@ -94,15 +108,14 @@
 #content_box2 .content2 .news{width: 473px;}
 #content_box2 .content2 .news ul{margin:5px; width: 473px; display:inline; background:url(../images/new_56.jpg) no-repeat top;}
 #content_box2 .content2 .news ul li{width: 460px; background:url(../images/jian_28.jpg) no-repeat 0 8px; line-height:27px; border-bottom:dashed 1px #cfcfcf; float:left; text-indent:1em; }
-#content_box2 .content2 .news ul li a{ font-family:"", Arial, Verdana, System;	font-size:12px;	line-height:26px; color:#333333;}
-#content_box2 .content2 .news ul li a:hover{ color:#1460AE}
+#content_box2 .content2 .news ul li a{ font-family:"", Arial, Verdana, System;	font-size:12px;	line-height:26px; color:#333;}
+#content_box2 .content2 .news ul li a:hover{ color:#007ADF; text-decoration:underline;}
 
-
-#content_box .content2 .news dl{ background:url(../images/Index/wdx.gif) no-repeat right bottom; padding-top:10px; }
+/*#content_box .content2 .news dl{ background:url(../images/Index/wdx.gif) no-repeat right bottom; padding-top:10px; }
 #content_box .content2 .news dl.barn{ background:none;}
 #content_box .content2 .news dt{ background:url(../images/problem_58.jpg) no-repeat 0 4px; padding-left:17px; height:22px; width:290px; overflow:hidden;white-space: nowrap;text-overflow: ellipsis;}
 #content_box .content2 .news dt a{ color:#2a8dd9; line-height:22px;}
-#content_box .content2 .news dd{ background:url(../images/problem_52.jpg) no-repeat 0 4px; padding-left:17px; color:#6a6263; line-height:27px;}
+#content_box .content2 .news dd{ background:url(../images/problem_52.jpg) no-repeat 0 4px; padding-left:17px; color:#6a6263; line-height:27px;}*/
 /*content2 end*/
 
 /*成功案例 start*/
@@ -122,17 +135,17 @@
 .scrollImgList1 ul{ width: auto; height:190px; float:left; margin-top:15px; overflow:hidden;}
 .scrollImgList1 ul li{width:159px; height: auto; text-align:center; float:left; margin:0 11px; display:inline; }
 .scrollImgList1 ul li .pic{}
-.scrollImgList1 ul li .pic a{ width:157px; height:132px; display:block; border:1px solid #9e9e9e;}
-.scrollImgList1 ul li .pic a:hover{ border:1px solid #48a72b;}
-.scrollImgList1 ul li .p1{ width:157px; height:auto; border:1px solid #cbcbcb; text-align:center; line-height:18px; font-size:12px; padding:5px 0; margin-top:7px;}
-.scrollImgList1 ul li .p1 a{ color:#4e4f46; }
-.scrollImgList1 ul li .p1 a:hover{ color:#fd0600;}
+.scrollImgList1 ul li .pic a{ width:157px; height:132px; display:block; border:1px solid #ccc;}
+.scrollImgList1 ul li .pic a:hover{ border:1px solid #206AB3;}
+.scrollImgList1 ul li .p1{ width:157px; height:auto; border:1px solid #ccc; text-align:center; line-height:18px; font-size:12px; padding:5px 0; margin-top:7px; white-space:nowrap; overflow:hidden;}
+.scrollImgList1 ul li .p1 a{ color:#333; }
+.scrollImgList1 ul li .p1 a:hover{ color:#007ADF; text-decoration:underline;}
 
 /*左右按钮滚动 end*/
 /*成功案例 end*/
 
 /*底部 start*/
-.bottom_box{background:#333; width:100%; text-align:center; margin-top:5px;}
+.bottom_box{background:#333; width:100%; text-align:center;}
 .bottom_box .bottom{width: 960px; margin: 0px auto;}
 .bottom_box .bottom a{ text-decoration: none; color: #8f8f8f;}
 .bottom_box .bottom a:hover{text-decoration: none; color: #0484CF;}
@@ -142,8 +155,8 @@
 .bottom_box .bottom .links{ margin-left:0px; width: 150px; color: #8f8f8f; line-height: 20px; text-align:left;}
 .bottom_box .bottom .links li p{ margin:5px auto;}
 .bottom_box .bottom .feedback{margin-left:0px; width:320px; color: #8f8f8f; line-height: 20px; text-align:left;}
-.bottom_box .bottom .feedback .input{background: #282828; width: 300px; height: 26px; margin-bottom: 6px; border:0px; color: #6e6e6e; padding-left: 10px; padding-right: 10px;}
-.bottom_box .bottom .feedback .input1{background:#282828;width:300px;height:26px;margin-bottom: 6px; border: 0px;color:#6e6e6e; padding-left: 10px; padding-right: 10px; height: 70px;}
+.bottom_box .bottom .feedback .input{background: #282828; width: 320px; height: 26px; margin-bottom: 6px; border:0px; color: #6e6e6e; padding-left: 10px;}
+.bottom_box .bottom .feedback .input1{background:#282828;width:320px;height:26px;margin-bottom: 6px; border: 0px;color:#6e6e6e; padding-left: 10px; height: 70px;}
 .bottom_box .bottom .copy{border-top: 1px solid #343434; color: #8f8f8f; padding: 4px 0px 4px 0px; text-align:center; margin-top:10px; border-top:1px solid #999; }
 /*底部 end*/
 
@@ -152,11 +165,31 @@
 
 /*paging*/
 .paging {font-family: Tahoma, Verdana; margin-top: 5px; text-align:center; color:#666;}
-.paging a:hover { border:1px solid #999; color:#fff; background-color:#999;}
-.paging a:active {border:1px solid #000099; color:#000000;}
 .paging span.current { padding:2px 8px 2px 8px; margin:3px; text-decoration:none;}
 .paging span.disabled { background:#EEE; padding:1px 8px 1px 8px; margin:2px; color:#999; font-size: 16px; line-height:16px;}
 .paging input { text-align:center; border: 1px solid #DBDBDB; background-color: #FFF; padding: 2px; color: #999; font-size: 12px; line-height: 14px; width:30px;  vertical-align: bottom;}
 
-.in_mall{padding-left:3px; display:inline-block; height:25px; color:#006EB9;}
+/*产品列表 分类*/
+.m-sort-list{border:0; margin: 10px auto;}
+.m-sort-list ul{min-height:31px;height:auto!important;height:31px;padding:7px 0 1px;zoom:1}
+.m-sort-list ul:after{content:'';display:table;clear:both}
+.m-sort-list li{display:inline;float:left; padding-bottom:8px;white-space:nowrap}
+.m-sort-list li a{float:left;padding:3px 9px;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;color:#666}
+.m-sort-list li a:hover{text-decoration:none}
+.m-sort-list .m-sort-select {color:#006EB9;};
 
+/*联系我们滚动效果*/
+#asid_share {position: fixed; width: 40px; bottom: 20%; right: 0; z-index: 890;}
+#asid_share .asid_share_box { width: 100%; margin-bottom: 3px; background: #BBB; text-align: center;} 
+#asid_share .asid_share_box a {display: block;height: 40px;padding-top: 5px; }
+#asid_share .asid_share_box a:hover .asid_title, #asid_share .asid_share_box .asid_title {color: #fff;font-size: 14px;display: block;padding-left: 0px;line-height: 20px;width: 40px;margin-top: -2px;}
+#asid_share .red_bag { background: #0A458C; text-decoration: none;}
+#asid_share .asid_sha_layer { border: 1px solid #ccc; background: #fff; position: absolute; right: 47px; bottom: -44px;}
+.sweep_img {padding: 10px;}
+.asid_share_box .asid_help_list li {line-height: 26px;height: 26px;background: url(../images/dian.png) no-repeat 6px 12px;}
+.asid_share_box .asid_help_list li a { line-height: 26px; height: 26px; padding: 0 0 0 14px; text-align: left;}
+.asid_help_list li a:hover {color: #fff;}.asid_share_triangle {width: 12px;height: 40px;position: absolute;right: 45px;bottom: -12px;z-index: 100;}
+.border_sj, .con_sj {display: block;width: 18px;height: 28px;font-size: 18px;overflow: hidden;font-family: SimSun;}
+.border_sj {color: #ccc;font-style: normal;}
+.con_sj {color: white;margin: -14px -2px 0 0;margin: -28px 0 0 -2px;}
+#all-none {display: none;}
