fix bugs & upload documents
fix bugs & upload documents

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -344,7 +344,7 @@ select {
 .page dd a {
  color: #999;
 }
-/* 首页商品筛选
+/* 首页产品筛选
 ----------------------------------------------- */
 .homeSortLeft {
  margin-right: 70px;
